--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -18,3 +18,16 @@ body {
     background-size: cover;
     background-attachment: fixed;
 }
+
+body>footer {
+    position: sticky;
+    height: auto;
+}
+
+#logo {
+    font-family: Playfair Display, sans-serif;
+    font-size: 65px;
+    color: rgb(181, 6, 6);
+    text-align: left;
+    padding-bottom: 50px;
+}
