--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -81,4 +81,22 @@ h3 {
     text-align: center;
     font-size: 30px;
     color: rgb(181, 6, 6);
+    font-size: 20px;
+}
+
+#start-button:hover {
+    transform: scale(1.3);
+}
+
+#start-button {
+    border: 2px outset goldenrod;
+    text-align: center;
+    font-size: 90%;
+    background-color: rgb(198, 4, 4);
+    color: #3a7cae;
+    border-radius: 50px;
+    padding: 15px 32px 15px 32px;
+    margin:0 auto;
+    margin-top: 20px;
+    transition: 0.5s ease-in-out all;
 }
