--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -38,7 +38,6 @@ body>footer {
     display: flex;
     flex-direction: row;
     justify-content: space-evenly;
-    position: sticky;
 }
 
 .socials li {
@@ -47,18 +46,15 @@ body>footer {
     padding: 15px;
     border-radius: 10px;
     margin: 1em;
-    position: sticky;
 }
 
 .socials li a {
     text-decoration: none;
     color: black;
-    position: sticky;
 }
 
 .socials li a i {
     margin-right: 8px;
-    position: sticky;
 }
 
 .container {
@@ -120,12 +116,13 @@ h3 {
     width: 20%;
     height: 50px;
     color: rgb(181, 6, 6);
+    text-align: center;
     font-family: PT Sans Caption, sans-serif;
     border: #1b99f9 3px solid;
     background-image: linear-gradient(to left, transparent 50%, white 50%);
     background-size: 200%;
     background-position: 0%;
-    display: inline-block;
+   flex-direction: column;
 }
 
 .btn:hover {
