--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -108,16 +108,12 @@ h3 {
     width: fit-content;
     height: auto;
     color: #3a7cae;
-    position: center;
+    align-items: center;
     font-size: 25px;
 }
 
-#game {
-    align-items: center;
-}
-
 .btn {
-    width: 20%;
+    width: 40%;
     height: 50px;
     color: rgb(181, 6, 6);
     text-align: center;
@@ -127,7 +123,12 @@ h3 {
 }
 
 .btn:hover {
-    box-shadow: inset 5px 5px 5px 5px #1b99f9, 5px 13px 20px 5px #1b99f9;
+    box-shadow: 0px 5px 15px 0 #1b99f9 inset , 0px 5px 15px 0px #1b99f9; inset;
+}
+
+.btn:active {
+    box-shadow: 0px 5px 15px 0 #1b99f9 inset;
+    transform: translateY(2px);
 }
 
 #restart-button:hover {
