--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -45,12 +45,16 @@ body>footer {
     background-color: #f0f0f0;
     padding: 15px;
     border-radius: 10px;
+    border-color: #1b99f9;
     margin: 1em;
+}
+.socials li:hover {
+    box-shadow:  0px 5px 15px 0 rgb(181, 6, 6) inset, 0px 5px 15px 0 rgb(181, 6, 6) inset;
 }
 
 .socials li a {
     text-decoration: none;
-    color: black;
+    color: rgb(181, 6, 6);
 }
 
 .socials li a i {
@@ -76,7 +80,10 @@ body>footer {
     font-size: 30px;
     color: rgb(181, 6, 6);
 }
-
+h5 {
+    font-size: 25px;
+    font-family: PT Sans Caption, sans-serif;
+}
 h3 {
     font-family: PT Sans Caption, sans-serif;
     text-align: center;
@@ -90,7 +97,7 @@ h3 {
 }
 
 #start-button {
-    border: 2px outset goldenrod;
+    border: 2px outset silver;
     text-align: center;
     font-size: 90%;
     background-color: rgb(198, 4, 4);
@@ -103,7 +110,9 @@ h3 {
     display: flex;
     justify-content: center;
 }
+
 /* CSS for questions and answers */
+
 #question {
     width: fit-content;
     height: auto;
@@ -112,18 +121,30 @@ h3 {
     font-size: 25px;
 }
 
+#qbuttons {
+    text-align: center;
+    margin: auto;
+    padding-bottom: 20%;
+    padding-top: 5%;
+}
+
 .btn {
     width: 40%;
     height: 50px;
     color: rgb(181, 6, 6);
+    background-color: rgb(193, 188, 188);
     text-align: center;
     font-family: PT Sans Caption, sans-serif;
     display: inline-block;
     margin: 10px;
+    font-weight: 100;
+    font-size: 15px;
+    position: relative;
+    border-radius: 25px 0 25px 0 ;
 }
 
 .btn:hover {
-    box-shadow: 0px 5px 15px 0 #1b99f9 inset , 0px 5px 15px 0px #1b99f9; inset;
+    box-shadow:  0px 5px 15px 0 #1b99f9 inset, 0px 5px 15px 0 #1b99f9 inset;
 }
 
 .btn:active {
