--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -180,6 +180,8 @@ h3 {
     #logo {
         clear: left;
         float: left;
+        width: 100%;
+        height: auto;
     }
 
     #intro {
@@ -190,4 +192,15 @@ h3 {
     #start-button {
         text-align: center;
     }
+
+    #question {
+        text-align: center;
+    }
+
+    .btn {
+        height: 90%;
+        width: 90%;
+        text-align: center;
+    }
+
 }
