--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,70 +1,70 @@
-@import url('https://fonts.googleapis.com/css2?family=Bangers&family=Barlow:wght@300&family=Lato:wght@300&family=Oswald&family=PT+Sans+Caption&family=Playfair+Display&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Bangers&family=Barlow:wght@300&family=Lato:wght@300&family=Oswald&family=PT+Sans+Caption&family=Playfair+Display&display=swap");
 * {
-    margin: 0;
-    padding: 0;
+  margin: 0;
+  padding: 0;
 }
 
 html,
 body {
-    height: 100%;
-    background-color: #081621;
+  height: 100%;
+  background-color: #081621;
 }
 
-body { 
-    background-image: url(../images/avengers1.jpeg);
-    height: 100vh;
-    width: 100%;
-    background-size: cover;
-    background-attachment: fixed;
+body {
+  background-image: url(../images/avengers1.jpeg);
+  height: 100vh;
+  width: 100%;
+  background-size: cover;
+  background-attachment: fixed;
 }
 
-body>footer {
-    position: sticky;
-    height: auto;
+body > footer {
+  position: sticky;
+  height: auto;
 }
 
 #logo {
-    font-family: Bangers, sans-serif;
-    font-size: 65px;
-    color: rgb(181, 6, 6);
-    text-align: left;
-    padding-bottom: 50px;
-    padding-left: 80px;
-
+  font-family: Bangers, sans-serif;
+  font-size: 65px;
+  color: rgb(181, 6, 6);
+  text-align: left;
+  padding-bottom: 50px;
+  padding-left: 80px;
 }
 /* CSS for welcome page */
 .socials {
-    text-align: center;
-    display: flex;
-    flex-direction: row;
-    justify-content: space-evenly;
+  text-align: center;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-evenly;
 }
 
 .socials li {
-    list-style: none;
-    background-color: #f0f0f0;
-    padding: 15px;
-    border-radius: 10px;
-    border-color: #1b99f9;
-    margin: 1em;
+  list-style: none;
+  background-color: #f0f0f0;
+  padding: 15px;
+  border-radius: 10px;
+  border-color: #1b99f9;
+  margin: 1em;
 }
 .socials li:hover {
-    box-shadow:  0px 5px 15px 0 rgb(181, 6, 6) inset, 0px 5px 15px 0 rgb(181, 6, 6) inset;
+  box-shadow: 0px 5px 15px 0 rgb(181, 6, 6) inset,
+    0px 5px 15px 0 rgb(181, 6, 6) inset;
 }
 
 .socials li a {
-    text-decoration: none;
-    color: navy;
+  text-decoration: none;
+  color: navy;
 }
 
 .socials li a i {
-    margin-right: 8px;
+  margin-right: 8px;
 }
 
 .container {
-    position: relative;
-    color: rgb(181, 6, 6);
-    text-align: left;
+  position: relative;
+  color: rgb(181, 6, 6);
+  text-align: left;
 }
 
 /* .paragraph { 
@@ -75,150 +75,150 @@ body>footer {
 } */
 
 #intro {
-    padding-top: 30px;
+  padding-top: 30px;
 }
 
 .li1 {
-    font-family: PT Sans Caption, sans-serif;
-    text-align: left;
-    font-size: 22px;
-    color: #3a7cae;
-    padding-bottom: 30px;
+  font-family: PT Sans Caption, sans-serif;
+  text-align: left;
+  font-size: 22px;
+  color: #3a7cae;
+  padding-bottom: 30px;
 }
 .li2 {
-    font-family: PT Sans Caption, sans-serif;
-    text-align: left;
-    font-size: 22px;
-    color: silver;
-    padding-bottom: 30px;
+  font-family: PT Sans Caption, sans-serif;
+  text-align: left;
+  font-size: 22px;
+  color: silver;
+  padding-bottom: 30px;
 }
 
 .li3 {
-    font-family: PT Sans Caption, sans-serif;
-    text-align: left;
-    font-size: 22px;
-    color: rgb(198, 4, 4);
+  font-family: PT Sans Caption, sans-serif;
+  text-align: left;
+  font-size: 22px;
+  color: rgb(198, 4, 4);
 }
 
 #about-game {
-    font-family: PT Sans Caption, sans-serif;
-    text-align: center;
-    font-size: 35px;
-    color: silver;
-    margin-top: 5%;
+  font-family: PT Sans Caption, sans-serif;
+  text-align: center;
+  font-size: 35px;
+  color: silver;
+  margin-top: 5%;
 }
 
 #start-button:hover {
-    transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 #start-button {
-    border: 2px outset silver;
-    text-align: center;
-    font-size: 90%;
-    background-color: rgb(198, 4, 4);
-    color: black;
-    border-radius: 50px;
-    padding: 15px 32px 15px 32px;
-    margin:0 auto;
-    transition: 0.5s ease-in-out all;
-    display: flex;
-    justify-content: center;
+  border: 2px outset silver;
+  text-align: center;
+  font-size: 90%;
+  background-color: rgb(198, 4, 4);
+  color: black;
+  border-radius: 50px;
+  padding: 15px 32px 15px 32px;
+  margin: 0 auto;
+  transition: 0.5s ease-in-out all;
+  display: flex;
+  justify-content: center;
 }
 
 /* CSS for questions and answers */
 
 #question {
-    color: silver;
-    align-items: center;
-    font-size: 25px;
-    margin-left: 5%;
-    margin-top: 20%;
+  color: silver;
+  align-items: center;
+  font-size: 25px;
+  margin-left: 5%;
+  margin-top: 20%;
 }
 
 #qbuttons {
-    text-align: center;
-    margin: auto;
-    padding-bottom: 5%;
-    padding-top: 10%;
+  text-align: center;
+  margin: auto;
+  padding-bottom: 5%;
+  padding-top: 10%;
 }
 
 .btn {
-    width: 40%;
-    height: 50px;
-    color: navy;
-    background-color: rgb(228, 224, 224);
-    text-align: center;
-    font-family: PT Sans Caption, sans-serif;
-    display: inline-block;
-    margin: 10px;
-    font-weight: 100;
-    font-size: 15px;
-    position: relative;
-    border-radius: 25px 0 25px 0 ;
+  width: 40%;
+  height: 50px;
+  color: navy;
+  background-color: rgb(228, 224, 224);
+  text-align: center;
+  font-family: PT Sans Caption, sans-serif;
+  display: inline-block;
+  margin: 10px;
+  font-weight: 100;
+  font-size: 15px;
+  position: relative;
+  border-radius: 25px 0 25px 0;
 }
 
 .btn:hover {
-    box-shadow:  0px 5px 15px 0 rgb(198, 4, 4) inset, 0px 5px 15px 0 rgb(198, 4, 4) inset;
+  box-shadow: 0px 5px 15px 0 rgb(198, 4, 4) inset,
+    0px 5px 15px 0 rgb(198, 4, 4) inset;
 }
 
 .btn:active {
-    box-shadow: 0px 5px 15px 0 rgb(198, 4, 4) inset;
-    transform: translateY(2px);
+  box-shadow: 0px 5px 15px 0 rgb(198, 4, 4) inset;
+  transform: translateY(2px);
 }
 
 #restart-button:hover {
-    transform: scale(1.3);
+  transform: scale(1.3);
 }
 
 #restart-button {
-    border: 2px outset silver;
-    text-align: center;
-    font-size: 90%;
-    background-color: rgb(198, 4, 4);
-    color: black;
-    border-radius: 50px;
-    padding: 15px 32px 15px 32px;
-    margin:0 auto;
-    margin-top: 5%;
-    margin-bottom: 8%;
-    transition: 0.5s ease-in-out all;
-    display: flex;
-    justify-content: center;
+  border: 2px outset silver;
+  text-align: center;
+  font-size: 90%;
+  background-color: rgb(198, 4, 4);
+  color: black;
+  border-radius: 50px;
+  padding: 15px 32px 15px 32px;
+  margin: 0 auto;
+  margin-top: 5%;
+  margin-bottom: 8%;
+  transition: 0.5s ease-in-out all;
+  display: flex;
+  justify-content: center;
 }
 
 #final-result {
-    font-size: 40px;
+  font-size: 40px;
 }
 
 .hide {
-    display: none !important;
+  display: none !important;
 }
 
 /* for media screen sizes from 960px wide and down */
 @media screen and (max-width: 950px) {
-    #logo img {
-       width: 70%;
-       height: auto;
-    }
+  #logo img {
+    width: 70%;
+    height: auto;
+  }
 
-    #intro {
-        clear: left;
-        float: left;
-    }
+  #intro {
+    clear: left;
+    float: left;
+  }
 
-    #start-button {
-        text-align: center;
-    }
+  #start-button {
+    text-align: center;
+  }
 
-    #question {
-        text-align: center;
-    }
+  #question {
+    text-align: center;
+  }
 
-    .btn {
-        height: 90%;
-        width: 90%;
-        text-align: center;
-    }
-
+  .btn {
+    height: 90%;
+    width: 90%;
+    text-align: center;
+  }
 }
