--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,19 +12,16 @@ body {
 body {
   background-color: #081621;
   background-image: url(../images/avengers1.jpeg);
-  min-height: 100vh;
+  background-position: right center;
   width: 100%;
   background-size: cover;
   background-attachment: fixed;
 }
-body footer {
-  margin-top: auto;
-}
-/*
+
 body > footer {
   position: sticky;
-  height: auto;
-}*/
+  top: 100vh;
+}
 
 #logo {
   font-family: Merriweather, sans-serif;
@@ -34,6 +31,7 @@ body > footer {
   padding-bottom: 50px;
   padding-left: 80px;
 }
+
 /* CSS for welcome page */
 .socials {
   text-align: center;
@@ -43,7 +41,7 @@ body > footer {
   font-size: 40px;
   color: #3a7cae;
   list-style: none;
-  padding-top: 45px;
+  padding: 0.5em 0;
 }
 
 .socials li a {
@@ -66,25 +64,28 @@ body > footer {
   padding-top: 30px;
 }
 
-.li1 {
+#intro ul {
+  padding: 1em;
+  max-width: 50%;
+}
+
+#intro ul li {
   font-family: Merriweather, sans-serif;
   text-align: left;
   font-size: 22px;
+}
+
+.li1 {
   color: #3a7cae;
   padding-bottom: 30px;
 }
+
 .li2 {
-  font-family: Merriweather, sans-serif;
-  text-align: left;
-  font-size: 22px;
   color: silver;
   padding-bottom: 30px;
 }
 
 .li3 {
-  font-family: Merriweather, sans-serif;
-  text-align: left;
-  font-size: 22px;
   color: rgb(198, 4, 4);
 }
 
@@ -105,7 +106,7 @@ body > footer {
   text-align: center;
   font-size: 90%;
   background-color: rgb(198, 4, 4);
-  color: black;
+  color: white;
   font-weight: 550;
   border-radius: 50px;
   padding: 15px 32px 15px 32px;
@@ -166,7 +167,7 @@ body > footer {
   text-align: center;
   font-size: 90%;
   background-color: rgb(198, 4, 4);
-  color: black;
+  color: white;
   border-radius: 50px;
   padding: 15px 32px 15px 32px;
   margin: 0 auto;
@@ -177,14 +178,23 @@ body > footer {
   justify-content: center;
 }
 
-#final-result {
-  font-size: 25px;
-  color: black;
+#results {
   text-align: center;
-  background-color: silver;
-  opacity: 0.5;
-  width: 40%;
-  margin-top: 15px;
+  background-image: url("../images/result-background.png");
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: right center;
+  max-width: 70%;
+  margin-top: 2em;
+}
+
+#final-result {
+  padding: 1em;
+  font-size: 25px;
+  color: white;
+  text-align: center;
+  width: 85%;
+  margin: 0 auto;
 }
 
 .hide {
@@ -212,14 +222,27 @@ body > footer {
   }
 
   .btn {
-    height: 90%;
     width: 90%;
     text-align: center;
+  }
+
+  #results {
+    max-width: 80%;
+  }
+
+  #intro ul {
+    background-color: rgb(8, 22, 33, 0.85);
+    max-width: 100%;
   }
 }
 
 @media screen and (max-width: 800px) {
   #intro {
     padding-top: 0;
+  }
+
+  #results {
+    max-width: 100%;
+    background-position: center center;
   }
 }
