--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,7 @@
   margin: 0;
   padding: 0;
 }
-
+/* style for body and footer */
 html,
 body {
   height: 100%;
@@ -23,6 +23,7 @@ body > footer {
   top: 100vh;
 }
 
+/* logo */
 #logo {
   font-family: Merriweather, sans-serif;
   font-size: 65px;
@@ -44,6 +45,7 @@ body > footer {
   padding: 0.5em 0;
 }
 
+/* style for social icons */
 .socials li a {
   text-decoration: none;
   color: #3a7cae;
@@ -60,6 +62,7 @@ body > footer {
   text-align: left;
 }
 
+/* intro */
 #intro {
   padding-top: 30px;
 }
@@ -89,6 +92,7 @@ body > footer {
   color: rgb(198, 4, 4);
 }
 
+/* about game section */
 #about-game {
   font-family: Merriweather, sans-serif;
   text-align: center;
@@ -97,6 +101,7 @@ body > footer {
   margin: 3% auto;
 }
 
+/* start button styling */
 #start-button:hover {
   transform: scale(1.3);
 }
@@ -158,6 +163,8 @@ body > footer {
   transform: translateY(2px);
 }
 
+
+/* restart button styling */
 #restart-button:hover {
   transform: scale(1.3);
 }
@@ -178,6 +185,7 @@ body > footer {
   justify-content: center;
 }
 
+/* results styling */
 #results {
   text-align: center;
   background-image: url("../images/result-background.png");
